# agda-prelude

./: .gitignore  CHANGELOG.md  LICENCE  README.md  agda-prelude.agda-lib
agda-ffi/: agda-ffi.cabal
agda-ffi/Agda/: FFI.hs
src/: Makefile  Prelude.agda
src/Builtin/: Coinduction.agda  Float.agda  Reflection.agda  Size.agda
src/Container/: Bag.agda  BinaryTree.agda  Dictionary.agda  Foldable.agda  List.agda  Traversable.agda
src/Container/BinaryTree/: AVL.agda  Base.agda  Ordered.agda  Properties.agda  (+2 more)
src/Control/: Strict.agda  WellFounded.agda
src/Data/: Bag.agda  Foldable.agda  List.agda  Monoid.agda  Rational.agda  Reflect.agda  Smashed.agda  Traversable.agda  TreeRep.agda
src/Numeric/: Nat.agda  Rational.agda
src/Prelude/: Alternative.agda  Applicative.agda  Bool.agda  Bytes.agda  Char.agda  Coinduction.agda  Decidable.agda  Empty.agda  Equality.agda  Erased.agda  Fin.agda  Fractional.agda  Function.agda  Functor.agda  IO.agda  Int.agda  List.agda  Maybe.agda  Monad.agda  Monoid.agda  Nat.agda  Number.agda  Ord.agda  Product.agda  Semigroup.agda  Semiring.agda  Show.agda  Sized.agda  Smashed.agda  Strict.agda  String.agda  Sum.agda  Unit.agda  Variables.agda  Vec.agda  Word.agda
src/Structure/: Smashed.agda
src/System/: Directory.agda  File.agda  FilePath.agda  Files.agda
src/Tactic/: Cong.agda  Deriving.agda  Monoid.agda  Nat.agda  Reflection.agda
src/Text/: Lex.agda  Parse.agda  Printf.agda
test/: DeriveEqTest.agda  Files.agda  Main.agda  Makefile  MonoidTactic.agda  NatTactic.agda  PrimeTest.agda  Reright.agda  expected.out  test.agda-lib
(+127 files in other folders)
